# 30plus_discord_bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  current_map_updater.py  mapcycle_updater.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_checks.sh
.github/workflows/: ci.yml
bot30/: __init__.py  clients.py  models.py  parsers.py  settings.py
tests/: test_mapcycle.py  test_mapcycle_updater.py  test_models.py
tests/data/: mapcycle.txt  mapcycle_plain.txt
