[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "30plus_discord_bot"
description = "30+ Discord Bot for Mapcycle and Player updates"
version = "1.0.0"
license.file = "LICENSE"
authors = [
    {name = "Urt Thirtyplus",  email = "urt30plus@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "aiofiles==23.1.0",
    "asyncio-dgram==2.1.2",
    "discord.py==2.2.2",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "types-aiofiles",
]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
packages = "bot30"
modules = ["current_map_updater", "mapcycle_updater"]
strict = true
warn_unreachable = true

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [".*"]
extend-select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle (errors)
    "F",  # Pyflakes
    "I",   # isort
    "PL",  # Pylint
    "RUF",
    "S",  # flake8-bandit
    "T20",  # flake8-print
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
    "YTT",  # flake8-2020
]
